# agi

./: .gitignore  ARCHITECTURE.md  PLAN.md  README.md  RUNTIME.md  pyproject.toml
agi/: __init__.py  __main__.py  abductor.py  active_inference.py  aegis.py  agent.py  aligner.py  analogist.py  annealer.py  anticipator.py  arbiter.py  attest.py  attributor.py  auditor.py  autoloop.py  autonomy.py  bandit.py  bayesopt.py  budget.py  budgeter.py  calibration.py  capabilities.py  cartographer.py  causal.py  causal_discovery.py  coalition.py  composer.py  compressor.py  confabulator.py  conformal.py  conjecturer.py  constitutionalist.py  continualist.py  contract.py  coord.py  coordination.py  coordinator.py  costs.py  counterfactor.py  curator.py  (+106 more)
coord/: __init__.py  client.py  coordinator.py  demo.py
coordinator/: __init__.py  dag.py
evals/: run.py  tasks.jsonl
examples/: abductor_demo.py  active_inference_demo.py  aegis_demo.py  agi_autonomy_demo.py  agi_demo.py  agi_runtime_acceleration_demo.py  aligner_demo.py  analogist_demo.py  annealer_demo.py  anticipator_coordination_demo.py  anticipator_demo.py  attest_demo.py  attributor_coordination_demo.py  attributor_demo.py  auditor_demo.py  bandit_demo.py  bayesopt_demo.py  budgeter_coordination_demo.py  budgeter_demo.py  calibration_demo.py  cartographer_demo.py  causal_demo.py  causal_discovery_demo.py  coalition_demo.py  composer_demo.py  confabulator_coordination_demo.py  confabulator_demo.py  conformal_demo.py  conjecturer_demo.py  constitutionalist_demo.py  continualist_coordination_demo.py  coordinator.py  coordinator_demo.py  coordinator_e2e.py  counterfactor_demo.py  curator_demo.py  debater_coordination_demo.py  debater_demo.py  deliberator_demo.py  diffuser_demo.py  (+75 more)
learner/: README.md  __init__.py  critic.py  filter.py  goals.py  skills.py  synth.py  traces.py  train.py  train_critic.py
runtime/: __init__.py  __main__.py  backend.py  budgets.py  capabilities.py  client.py  engine.py  jobs.py  metrics.py  mock_agent.py  runtime.py  (+3 more)
(+165 files in other folders)
