[project]
name = "agi"
version = "0.1.0"
description = "An agent harness built on Claude Opus 4.7."
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.50.0",
]

[project.scripts]
agi = "agi.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agi*"]
